# ml_tooling

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pyup.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  RELEASE_CHECKLIST.md  dev-requirements.in  dev-requirements.txt  environment.yml  httpproxy.crt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  docs.yml  release.yml  test.yml
docs/: api.rst  baseclass.rst  conf.py  config.inc.rst  contents.rst  dataset.inc.rst  dataset.rst  example.rst  index.rst  install.rst  metrics.inc.rst  plots.inc.rst  plotting.rst  quickstart.rst  result.inc.rst  storage.inc.rst  storage.rst  transformers.inc.rst  transformers.rst  tutorial.rst
notebooks/: Boston Houseprices Demo.ipynb  California Houseprices Demo.ipynb  Iris Demo.ipynb  Test Rare feature encoder - Boston Houseprices.ipynb  Titanic Demo.ipynb  Untitled.ipynb  helpers.py
notebooks/models/: IrisModel_RandomForestClassifier_f8021acf332eca0e8e552c63212d30aa5d5333cc.pkl
notebooks/save/: RandomForestClassifier_2019-10-22_13:33:19.253708.pkl  RandomForestClassifier_2019-10-22_13:33:59.919305.pkl
src/ab_models/: __init__.py  almbrand.mplstyle  config.py
src/ab_models/baseclass/: baseclass.py  config.py
src/ab_models/transformers/: __init__.py  pandas_transformers.py
src/ab_models/visualizations/: __init__.py  visualizations.py
src/ml_tooling/: __init__.py  almbrand.mplstyle  baseclass.py  config.py  logging.py  metrics.py  plots.py  production_model.pkl  result.py  transformers.py  utils.py
src/ml_tooling/data/: __init__.py  base_data.py  data.py  dataloader.py  demo_dataset.py  file.py  load_demo.py  sql.py
src/ml_tooling/data/viz/: __init__.py  data_viz.py
src/ml_tooling/logging/: __init__.py  log_estimator.py  log_model.py  logger.py
src/ml_tooling/metrics/: __init__.py  confusion_matrix.py  correlation.py  lift_score.py  metric.py  permutation_importance.py  utils.py
src/ml_tooling/plots/: __init__.py  confusion_matrix.py  correlation.py  feature_importance.py  learning_curve.py  lift_curve.py  mean_categorical_target.py  missing_data.py  permutation_importance.py  precesion_recall_curve.py  precision_recall_curve.py  prediction_error.py  residuals.py  roc_auc.py  target_feature_distribution.py  utils.py  validation_curve.py
src/ml_tooling/plots/viz/: __init__.py  baseviz.py  classification_viz.py  data_viz.py  regression_viz.py
src/ml_tooling/result/: __init__.py  classification_viz.py  cv_result.py  regression_viz.py  result.py  result_group.py
src/ml_tooling/result/viz/: __init__.py  baseviz.py  classification_viz.py  regression_viz.py
src/ml_tooling/search/: __init__.py  base.py  bayes.py  gridsearch.py  randomsearch.py
src/ml_tooling/storage/: __init__.py  artifactory.py  base.py  file.py
src/ml_tooling/transformers/: __init__.py  binarize.py  binner.py  categorical.py  date_encoder.py  feature_union.py  fillna.py  freqfeature.py  functransform.py  pandas_transformers.py  pipeline.py  rare_feature.py  renamer.py  scaler.py  select.py  to_categorical.py
src/ml_tooling/visualizations/: __init__.py  visualizations.py
src/ml_tools/: config.py
src/ml_tools/baseclass/: utils.py
src/ml_tools/transformers/: __init__.py
src/ml_utils/: __init__.py  config.py
src/ml_utils/baseclass/: _baseclass.py  baseclass.py  result.py
src/ml_utils/metrics/: __init__.py  metrics.py
src/ml_utils/transformers/: __init__.py  pandas_transformers.py
src/ml_utils/visualizations/: __init__.py  _visualizations.py  helpers.py  visualizations.py
tests/: conftest.py  test_artifactory.py  test_baseclass.py  test_config.py  test_data.py  test_dataloader.py  test_helper.py  test_metrics.py  test_result.py  test_search.py  test_storage.py  test_transformers.py  test_utils.py  test_visualize.py
tests/fixtures/: dataframes.py  datasets.py  estimators.py  files.py
tests/test_datasets/: test_dataset.py  test_demo_dataset.py  test_filedataset.py  test_sqldataset.py
tests/test_results/: test_result.py  test_resultgroup.py
tests/test_transformers/: test_fillna.py
tests/test_visualizations/: test_confusion_matrix.py  test_feature_importance_plot.py  test_learning_curve.py  test_lift_curve_plot.py  test_missing_data_viz.py  test_permutation_importance.py  test_plot_classes.py  test_precision_recall_curve.py  test_prediction_error_plot.py  test_residual_plot.py  test_roc_curve.py  test_target_correlation.py  test_target_feature_distribution.py  test_validation_curve.py
tests/test_visualize/: test_feature_importance_plot.py
