[metadata]
name = ml_tooling
version = 0.2.1
description = A library for machine learning utilities
url = https://github.com/andersbogsnes/ml_tooling
long_description = file:README.md
long_description_content_type=text/markdown
author = Anders Bogsnes
author_email = abanbn@almbrand.dk
license = MIT
classifiers =
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Development Status :: 3 - Alpha
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
keywords = ml, framework, tooling

[options]
zip_safe = False
python_requires = ~=3.6
packages = find:
install_requires =
    pandas==0.23.4
    numpy==1.15.3
    pandas==0.23.4
    scikit-learn[alldeps]==0.20.0
    matplotlib==3.0.0
    gitpython==2.1.11

package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* = *.mplstyle

[options.extras_require]
dev =
    pytest==3.9.2
    pytest-cov==2.6.0


[flake8]
max-line-length = 100
ignore = W605
exclude =
    .git
    build
    dist
    notebooks
    __pycache__
    .tox
    .pytest_cache
    *.egg-info

[coverage:run]
source = ml_utils
omit = */__init__.py
       */__version__.py
       tests/*
branch = True

[coverage:paths]
source = ml_tooling

[tool:pytest]
addopts = -p no:warnings -v  --cov ml_tooling --cov-report html --cov-report term

[tox:tox]
envlist = py36

[testenv]
deps = pytest==3.9.2
       pytest-cov==2.6.0

commands = pytest --cov-config setup.cfg
basepython= py36: python
