[metadata]
name = ml_tooling
version = 0.6.2
description = A library for machine learning utilities
url = https://github.com/andersbogsnes/ml_tooling
long_description = file:README.md
long_description_content_type=text/markdown
author = Anders Bogsnes
author_email = abanbn@almbrand.dk
license = MIT
license_file = LICENSE
classifiers =
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Development Status :: 3 - Alpha
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
keywords = ml, framework, tooling

[options]
zip_safe = False
python_requires = ~=3.6
packages = find:
install_requires =
    pandas==0.24.2
    numpy==1.16.3
    scikit-learn[alldeps]==0.21.0
    matplotlib==3.0.3
    gitpython==2.1.11
    pyyaml==5.1

package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* = *.mplstyle

[options.extras_require]
dev = pytest==4.5.0
      pytest-cov==2.7.1



[flake8]
max-line-length = 100
ignore = W605
exclude =
    .git
    build
    dist
    notebooks
    __pycache__
    .tox
    .pytest_cache
    *.egg-info

[coverage:run]
source = ml_utils
omit = */__init__.py
       */__version__.py
       tests/*
branch = True

[coverage:report]
exclude_lines = def __repr__

[coverage:paths]
source = ml_tooling

[tool:pytest]
addopts = -p no:warnings -v  --cov ml_tooling --cov-report html --cov-report term

[tox:tox]
envlist = py36

[testenv]
deps = pytest==4.5.0
       pytest-cov==2.7.1

commands = pytest --cov-config setup.cfg
basepython= py36: python
