[metadata]
name = ml_tooling
version = 0.7
description = A library for machine learning utilities
url = https://github.com/andersbogsnes/ml_tooling
long_description = file:README.md
long_description_content_type = text/markdown
author = Anders Bogsnes
author_email = abanbn@almbrand.dk
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = ml, framework, tooling

[options]
zip_safe = False
python_requires = ~=3.6
packages = find:
install_requires =
    pandas==0.25.0
    scikit-learn[alldeps]==0.21.3
    matplotlib==3.1.1
    gitpython==2.1.11
    pyyaml==5.1.1
    joblib==0.13.2


package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* = *.mplstyle

[options.extras_require]
test =
    pytest==5.0.0
    coverage==4.5.3
docs =
    sphinx==2.1.2

dev =
    pytest==5.0.0
    coverage==4.5.3
    pre-commit==1.17.0

[flake8]
max-line-length = 100
ignore = W605,W503
exclude =
    .git
    build
    dist
    notebooks
    __pycache__
    .tox
    .pytest_cache
    *.egg-info

[coverage:run]
source = ml_tooling
branch = true

[coverage:report]
exclude_lines = def __repr__
show_missing = true

[coverage:paths]
source =
    src
    .tox/*/site-packages

[tool:pytest]
addopts = -ra
strict = True
testpath = tests
filterwarnings =
    once::Warning
